// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/DeleteConfirmationDialog default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1008;"
  >
    <div
      aria-labelledby="pv_id_15_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1009;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_15_header"
        >
          Delete
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        <p>
          Confirm that you want to delete the element.
        </p>
      </div>
       
      <div
        class="p-dialog-footer"
      >
        <button
          class="p-button-text p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-times p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Cancel
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <button
          class="p-button-primary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-check p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Submit
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/DeleteConfirmationDialog on submitting 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1009;"
  >
    <div
      aria-labelledby="pv_id_16_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1010;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_16_header"
        >
          Delete
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        <p>
          Confirm that you want to delete the element.
        </p>
      </div>
       
      <div
        class="p-dialog-footer"
      >
        <button
          class="p-button-text p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-times p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Cancel
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <button
          class="p-button-text p-button p-component"
          disabled="disabled"
          type="button"
        >
          <span
            class="pi pi-spin pi-spinner p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Please wait
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/DeleteConfirmationDialog with a name 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1010;"
  >
    <div
      aria-labelledby="pv_id_17_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1011;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_17_header"
        >
          Delete
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        <p>
          
      Confirm that you want to delete the following element: 
          <strong>
             Book name
          </strong>
          .
    
        </p>
      </div>
       
      <div
        class="p-dialog-footer"
      >
        <button
          class="p-button-text p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-times p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Cancel
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <button
          class="p-button-primary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-check p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Submit
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/DeleteConfirmationDialog with a name and a category 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1011;"
  >
    <div
      aria-labelledby="pv_id_18_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1012;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_18_header"
        >
          Delete
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        <p>
          
      Confirm that you want to delete the following element: 
          <strong>
            book Book name
          </strong>
          .
    
        </p>
      </div>
       
      <div
        class="p-dialog-footer"
      >
        <button
          class="p-button-text p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-times p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Cancel
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <button
          class="p-button-primary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-check p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Submit
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
